--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --env-file=.env dist/server.js",
-    "dev": "nodemon --env-file=.env dist/server.js"
+    "dev": "nodemon --env-file=.env dist/server.js",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +23,10 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
     "nodemon": "^3.0.1",
+    "prettier": "3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
