--- a/package.json
+++ b/package.json
@@ -18,15 +18,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/morgan": "^1.9.9",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "validator": "^13.11.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.14.202",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/validator": "^13.11.7",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
     "nodemon": "^3.0.1",
