--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.6.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-magic-motion": "^1.1.2",
     "react-redux": "^9.0.1",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
