--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.14.202",
     "@types/morgan": "^1.9.9",
