--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-magic-motion": "^1.1.2",
     "react-redux": "^9.0.1",
     "react-router": "^6.20.1",
